Ajout du menu help - preferences et du dialogue associé

--- a/lazarus-source/boardview.ini
+++ b/lazarus-source/boardview.ini
@@ -2,20 +2,11 @@
 ;  application initialization
 ;  parameters
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-
-
-[path]
-; components bitmap files path
-bmpdir=.\bitmaps\
-; components file
-library=components.ini
-; projects directory
-; default is same as the application program.
-ProjectDir=
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;  solderless prototyping boards
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-[prototype boards]
-small=protoboard-small.bmp
-medium=protoboard-medium.bmp
-large=protoboard-large.bmp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;; user's manual preference
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[help preferences]
+; english=0, french=1
+language=0
+; html=0, pdf=1
+format=0
