--- a/lazarus-source/backup/boardview.lpi
+++ b/lazarus-source/backup/boardview.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="12">
+    <Units Count="13">
       <Unit0>
         <Filename Value="boardview.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -120,6 +120,14 @@
         <Filename Value="readme.md"/>
         <IsPartOfProject Value="True"/>
       </Unit11>
+      <Unit12>
+        <Filename Value="unithelppref.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormHelpPref"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="unitHelpPref"/>
+      </Unit12>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
