revision 1.1.2 see file lazarus-source/Worklog.md

--- a/lazarus-source/components.ini
+++ b/lazarus-source/components.ini
@@ -14,15 +14,15 @@ speaker=speaker.bmp
 toggle switch SPST=toggle-spst.bmp
 
 [integrated circuit]
-DIL 14=DIL-14.BMP
-DIL 16=DIL-16.BMP
-DIL 18=DIL-18.BMP
-DIL 20=DIL-20.BMP
-DIL 22=DIL-22.BMP
-DIL 24=DIL-24.BMP
-DIL 28=DIL-28.BMP
-DIL 40=DIL-40.BMP
-DIL 8=DIL-8.BMP
+DIL 14=DIL-14.bmp
+DIL 16=DIL-16.bmp
+DIL 18=DIL-18.bmp
+DIL 20=DIL-20.bmp
+DIL 22=DIL-22.bmp
+DIL 24=DIL-24.bmp
+DIL 28=DIL-28.bmp
+DIL 40=DIL-40.bmp
+DIL 8=DIL-8.bmp
 
 [opto]
 blue LED=led-blue.bmp
